--- a/Azur.Console/App.config
+++ b/Azur.Console/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+    <appSettings>
+      <add key="UploadPath" value="E:\APPLICATION DATA\Kalpawreska Teknologi Indonesia\Storage Blob\Upload\"/>
+    </appSettings>
 </configuration>
